Fixed longer conversation scrolling issues overlapping with the text bar

--- a/webapp/bot/static/css/chat.css
+++ b/webapp/bot/static/css/chat.css
@@ -4,10 +4,15 @@
 .material-icons.md-48 { font-size: 48px; }
 
 .fixed-bottom {
+    z-index: 1;
     position: fixed;
     right: 0;
     bottom: 0;
     left: 0;
+}
+
+.history {
+    padding-bottom: 50px;
 }
 
 .bubble {
